GNOME Bugzilla – Bug 786300
wayland/buffer: Add missing breaks in switch statement
Last modified: 2017-08-16 05:42:36 UTC
This came up as coverity issues.
Created attachment 357603 [details] [review] wayland/buffer: Add missing breaks in switch statement We'd process damage, and no matter whether it succeeded or not we'd pretend it succeeded, meaning any potential GError would be leaked.
Review of attachment 357603 [details] [review]: Good catch
Attachment 357603 [details] pushed as 9a47e5c - wayland/buffer: Add missing breaks in switch statement